cinny/cinny.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinny
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Content-Security-Policy: frame-ancestors 'self'";
spec:
  tls:
  - hosts:
    - www.cheatcodesam.com
    - cheatcodesam.com
    secretName: quickstart-example-tls
  rules:
  - host: www.cheatcodesam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cinny
            port:
                number: 80
